--- a/projects/charon/src/app/core/layout/layout-footer/layout-footer.component.scss
+++ b/projects/charon/src/app/core/layout/layout-footer/layout-footer.component.scss
@@ -3,6 +3,7 @@
 :host {
   background-color: $color-black;
   display: block;
+  padding: $grid-step * 1.5 0;
   width: 100%;
 }
 
@@ -11,7 +12,7 @@
   color: $color-white;
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
-  margin: $grid-step * 1.5 auto;
+  margin: 0 auto;
   padding: 0 $page-side-padding;
   width: $page-width + $page-side-padding * 2;
 }
